# c_embed

./: .envrc  .gitignore  .gitmodules  Makefile  clib.json  meson.build
docker/: Dockerfile
embed/: embed.c  embed.h  meson.build
embed-test/: embed-test.c  embed-test.h  meson.build
embed-utils/: embed-utils.c  embed-utils.h  meson.build
embed/include/: cflag.h  chan.h  embed.h
embed/src/: embed.c
include/: includes.h  uuid4.h
loader/: meson.build
loader/include/: cflag.h  chan.h  embeds.h  includes.h  loader_chan.h  loader_hash.h  loader_iterate.h
loader/src/: cargs0.c  includes.c  loader1.c  loader_chan.c  loader_dev.c  loader_hash.c  loader_iterate.c  loader_list.c  loader_stats.c  spng0.c  termkey0.c  vtparse0.c  vtparse_example.c
loader/src/color0/: colors.c  colors.h  main.c  options.c  options.h  output.c  output.h
src/: c_embed.c  uuid4.c
submodules/: meson.build
subprojects/: boydemdb.wrap  libinput.wrap  libtermpaint.wrap
